deleted regenerate button